2013-08-31  Eli Zaretskii  <eliz@gnu.org>

	* systhread.c (sys_cond_init): Set the 'initialized' member to
	true only if initialization is successful.  Initialize wait_count
	and wait_count_lock.
	(sys_cond_wait, sys_cond_signal, sys_cond_broadcast): If
	'initialized' is false, do nothing.
	(sys_cond_wait): Fix the implementation to avoid the "missed
	wakeup" bug: count the waiting threads, and reset the broadcast
	event once the last thread was released.
	(sys_cond_signal, sys_cond_broadcast): Use SetEvent instead of
	PulseEvent.  Don't signal the event if no threads are waiting.
	(sys_cond_destroy): Only close non-NULL handles.
	(sys_thread_create): Return zero if unsuccessful, 1 if successful.

	* systhread.h (w32thread_cond_t): New member 'initialized'.
	Rename waiters_count and waiters_count_lock to wait_count and
	wait_count_lock, respectively.

2013-08-30  Eli Zaretskii  <eliz@gnu.org>

	* systhread.h (w32thread_critsect, w32thread_cond_t, sys_mutex_t)
	(sys_cond_t, sys_thread_t) [WINDOWSNT]: New data types.

	* systhread.c (sys_mutex_init, sys_mutex_lock, sys_mutex_unlock)
	(sys_mutex_destroy, sys_cond_init, sys_cond_wait)
	(sys_cond_signal, sys_cond_broadcast, sys_cond_destroy)
	(sys_thread_self, sys_thread_equal, w32_beginthread_wrapper)
	(sys_thread_create, sys_thread_yield) [WINDOWSNT]: New functions.

2013-08-26  Eli Zaretskii  <eliz@gnu.org>

	* callproc.c: 
	* emacs.c: 
	* filelock.c: 
	* process.c: 
	* sysdep.c: 
	* w32.c: Reshuffle Windows-specific headers to avoid errors with
	redefinition of fd_set etc.

	* process.c: Don't use num_pending_connects when
	NON_BLOCKING_CONNECT is not defined.

	* sysselect.h: Move definitions of FD_* macros and of SELECT_TYPE
	here from w32.h.

	* w32proc.c (sys_select): Adjust the argument types to what
	thread.h expects.

2013-08-24  Eli Zaretskii  <eliz@gnu.org>

	* xdisp.c (get_next_display_element): Don't apply to characters
	from a display vector the logic of setting it->end_of_box_run_p